--- a/samples/nextjs-sample/package.json
+++ b/samples/nextjs-sample/package.json
@@ -14,8 +14,11 @@
     "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@supabase/supabase-js": "^2.49.8",
+    "@types/bcrypt": "^6.0.0",
     "arctic": "^3.6.0",
+    "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jose": "^6.0.11",
